2021-03-21  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py (calc_entropy_drift): added an entropy function
	that covers a single range of numbers, so that entropies are more
	commensurate.

	* GA-poly-max.py: separated out the entropy calculation into
	selectable functions, so that now it is reported in the metadata.

	* plot_ga_output.py: adjusted sizes so that we now get a
	reasonable fit.

	* plot_ga_output.py (load_LEM, present_metadata): metadata is now
	in there, but the overall window size does not currently hold it
	in.

	* plot_ga_output.py: started moving toward a gridspec layout so I
	can add metadata information.

	* README.md: added some information on how to do runs and plots.

	* GA-poly-max.py: reintroduced some stashed changes that set
	function names for various entropy calculations, mutations, and
	initial distributions.

2021-03-20  Mark Galassi  <mark@galassi.org>

	* GA-entropy-slides.tex, README.md: a simple start to a beamer
	presentation.

	* GA-gen-info_pid3095791.out.pdf:
	* GA-gen-info_pid3095791.metadata: added a provisional reference
	figure.

	* README.md: added a bit more about how to generate the paper.

	* write_up.tex: some structural adaptation of the write-up.

2021-03-14  Mark Galassi  <mark@galassi.org>

	* GA-poly-max.py: adjusted parameters to get some good entropy
	runs.  Also started modifying the drift entropy so that the range
	of x is a bit more uniform even when the population variety
	shrinks.  Also started commenting out the data frame plotting
	approach in favor of the separate program.

2021-03-10  Mark Galassi  <mark@galassi.org>

	* plot_ga_output.py (plot_runfile): added a plot for the position
	of the object.

	* plot_ga_output.py (plot_runfile): added a title to each plot
	window.  Also added saving this plot to a pdf file.

	* plot_ga_output.py: new program which loads the ouput files from
	GA-poly-max.py and gives a visualization.  At this time it shows